--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List | Notion</title>
 
+    <!-- Font Awesome CDN 6.4.0 -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
+
     <!-- CSS -->
-    <link rel="stylesheet" href="/src/css/public.css">
-</head>
-<body>
-     
-    
+    <link rel="stylesheet" href="src/css/public.css" />
+    <link rel="stylesheet" href="src/css/search.css" />
+    <link rel="stylesheet" href="src/css/addcard-btn.css">
+
+  </head>
+  <body id="body">
+    <header>
+      <div class="centralized-container">
+        <h1>To Do List</h1>
+
+        <form method="post">
+          <div class="search">
+            <input
+              class="search-input"
+              type="search"
+              id="search"
+              placeholder="Search..." />
+          </div>
+          <button class="btn--new">New</button>
+        </form>
+      </div>
+    </header>
+
     <!-- JS -->
-    <script src="/src/js/index.js"></script>
-</body>
+    <script type="module" src="src/js/model/index.js"></script>
+  </body>
 </html>
