--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="src/css/search.css" />
     <link rel="stylesheet" href="src/css/addcard-btn.css" />
     <link rel="stylesheet" href="src/css/filter-form.css">
+    <link rel="stylesheet" href="src/css/header.css">
   </head>
   <body id="body">
     <header>
