--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
     <link rel="stylesheet" href="src/css/header.css">
   </head>
   <body id="body">
-    <header>
-      <div class="centralized-container">
-        <h1>To Do List</h1>
-
-        <form class="filter-form" method="post">
-          <button class="btn--new">New</button>
-          <div class="search">
-            <input
-              class="search-input"
-              type="search"
-              id="search"
-              placeholder="Search..." />
+    <main>
+      <div class="card">
+        <div class="card-img">
+          <img  src="/assets/images/card-img/git.png" alt="image not found">
+        </div>
+        <div class="card-body">
+          <h3 class="card-body-title"></h3>
+          <div class="card-body-progress">
+            <span>Done</span>
           </div>
-        </form>
+          <div class="card-body-creator">
+            
+          </div>
+
+        </div>
       </div>
-    </header>
+    </main>
 
     <!-- JS -->
     <script type="module" src="src/js/model/index.js"></script>
