implemented ToDoCard & ToDoCardsContainer

--- a/index.html
+++ b/index.html
@@ -18,27 +18,13 @@
     <link rel="stylesheet" href="src/css/public.css" />
     <link rel="stylesheet" href="src/css/search.css" />
     <link rel="stylesheet" href="src/css/addcard-btn.css" />
-    <link rel="stylesheet" href="src/css/filter-form.css">
-    <link rel="stylesheet" href="src/css/header.css">
+    <link rel="stylesheet" href="src/css/filter-form.css" />
+    <link rel="stylesheet" href="src/css/header.css" />
+    <link rel="stylesheet" href="src/css/todo-card.css" />
+    <link rel="stylesheet" href="src/css/todo-cards-container.css" />
   </head>
   <body id="body">
-    <main>
-      <div class="card">
-        <div class="card-img">
-          <img  src="/assets/images/card-img/git.png" alt="image not found">
-        </div>
-        <div class="card-body">
-          <h3 class="card-body-title"></h3>
-          <div class="card-body-progress">
-            <span>Done</span>
-          </div>
-          <div class="card-body-creator">
-            
-          </div>
-
-        </div>
-      </div>
-    </main>
+    <!-- Content -->
 
     <!-- JS -->
     <script type="module" src="src/js/model/index.js"></script>
