Implemented Status Reusable Component

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <link rel="stylesheet" href="src/css/header.css" />
     <link rel="stylesheet" href="src/css/todo-card.css" />
     <link rel="stylesheet" href="src/css/todo-cards-container.css" />
+    <link rel="stylesheet" href="src/css/status.css" />
+    <link rel="stylesheet" href="src/css/addcard--popup.css" />
   </head>
   <body id="body">
-    <!-- Content -->
+    <!-- Generated HTML Content -->
+
 
     <!-- JS -->
     <script type="module" src="src/js/model/index.js"></script>
