--- a/index.html
+++ b/index.html
@@ -28,6 +28,102 @@
   <body id="body">
     <!-- Generated HTML Content -->
 
+    <div class="add-card--overlay">
+      <div class="add-card--popup">
+        <div class="add-card-content">
+          <img
+            class="add-card-cover-image"
+            src="assets/images/card-img/git.png"
+            alt="image not found" />
+
+          <div class="add-card-content--header centralized-container">
+            <div class="add-card-content--header--container">
+              <img
+                class="add-card-image--icon"
+                src="assets/images/card-icon/giticon.png"
+                alt="image not found" />
+              <span>1</span>
+              <h3 contenteditable="true">Git</h3>
+            </div>
+
+            <i class="fa-solid fa-ellipsis"></i>
+          </div>
+        </div>
+        <div class="centralized-container">
+          <ul class="add-card-info">
+            <li class="grid-item">
+              <h5>Created</h5>
+            </li>
+            <li class="grid-item text-overflow-handler">
+              <p class="text-overflow-handler">July 26, 2023 9:53 AM</p>
+            </li>
+
+            <li class="grid-item">
+              <h5>Date</h5>
+            </li>
+            <li class="grid-item text-overflow-handler">
+              <p class="text-overflow-handler">
+                August 3, 2023 → August 16, 2023
+              </p>
+            </li>
+
+            <li class="grid-item">
+              <h5>Status</h5>
+            </li>
+
+            <li class="grid-item">
+              <div class="status in-progress--color">
+                <span class="status-title">In Progress</span>
+              </div>
+            </li>
+          </ul>
+          <div class="add-card--todo-cards">
+            <ul class="add-card--todo-cards--categories">
+              <li class="active">
+                <i class="fa-solid fa-table"></i> <span>Border View</span>
+              </li>
+            </ul>
+            <ul class="add-card--todo-cards--drag-drop-playground">
+              <li>
+                <div class="add-card--todo-cards--drag-drop-playground--header">
+                  <i class="fa-regular fa-circle"></i> <span>To Do</span>
+                </div>
+                <ul class="add-card--todo-cards--drag-drop-playground--cards">
+                  <li draggable="true">
+                    <div
+                      class="add-card--todo-cards--drag-drop-playground--card--content">
+                      <img
+                        src="/assets/images/card-icon/giticon.png"
+                        alt="image not found"
+                        height="25px"
+                        width="25px" />
+                      <span>1</span>
+                      <p>An Interactive Git Exercise</p>
+                    </div>
+                    <i class="fa-solid fa-ellipsis"></i>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <div class="add-card--todo-cards--drag-drop-playground--header">
+                  <i class="fa-regular fa-circle-play"></i>
+                  <span>In Progress</span>
+                </div>
+                <ul
+                  class="add-card--todo-cards--drag-drop-playground--cards"></ul>
+              </li>
+              <li>
+                <div class="add-card--todo-cards--drag-drop-playground--header">
+                  <i class="fa-regular fa-circle-check"></i> <span>Done</span>
+                </div>
+                <ul
+                  class="add-card--todo-cards--drag-drop-playground--cards"></ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- JS -->
     <script type="module" src="src/js/model/index.js"></script>
