Implemented Add To-Do Card Feature

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <link rel="stylesheet" href="src/css/status.css" />
     <link rel="stylesheet" href="src/css/addcard--popup.css" />
   </head>
-  <body id="body">
+  <body>
     <!-- Generated HTML Content -->
 
     <!-- JS -->
-    <script type="module" src="src/js/model/index.js"></script>
+    <script type="module" src="src/js/controller/index.js"></script>
   </body>
 </html>
