--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="src/css/todo-cards-container.css" />
     <link rel="stylesheet" href="src/css/status.css" />
     <link rel="stylesheet" href="src/css/addcard--popup.css" />
-    <link rel="stylesheet" href="src/css/edit-list.css">
+    <link rel="stylesheet" href="src/css/edit-list.css" />
     <!-- <link rel="stylesheet" href="src/css/loader.css"> -->
   </head>
   <body>
